# Embeddinated-Android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: jna
app/src/main/: AndroidManifest.xml
app/src/main/c/: glib.c  managed.c  mono_embeddinator.c  mscorlib.c
app/src/main/cpp/: embeddinator  managed.c  managed.h  mono_embeddinator.c  mscorlib.c  mscorlib.h  native-lib.cpp
app/src/main/java/managed_dll/: BuiltinTypes.java  ClassWithoutNamespace.java  ExposeExtraTypes.java  MyException.java  MyNextException.java  Native_managed_dll.java  Platform.java  Type_Byte.java  Type_Char.java  Type_Decimal.java  Type_Double.java  Type_Int16.java  Type_Int32.java  Type_Int64.java  Type_SByte.java  Type_Single.java  Type_String.java  Type_UInt16.java  Type_UInt32.java  Type_UInt64.java
app/src/main/java/managed_dll/arrays/: Arr.java  ArrayTypes.java  ValueHolder.java
app/src/main/java/managed_dll/comparable/: Both.java  Class.java  Different.java  Generic.java
app/src/main/java/managed_dll/constructors/: AllTypeCode.java  DefaultValues.java  Duplicates.java  Implicit.java  SuperUnique.java  Unique.java
app/src/main/java/managed_dll/enums/: ByteEnum.java  ByteFlags.java  Enumer.java  IntEnum.java  ShortEnum.java
app/src/main/java/managed_dll/equalshashoverrides/: Class.java  EquatableClass.java  EquatableInt.java
app/src/main/java/managed_dll/exceptions/: Base.java  Super.java  ThrowInStaticCtor.java  Throwers.java
app/src/main/java/managed_dll/fields/: Class.java  Struct.java
app/src/main/java/managed_dll/first/: ClassWithSingleNamespace.java
app/src/main/java/managed_dll/interfaces/: ExposeIFormatProvider.java  IMakeItUp.java  IMakeItUpImpl.java  IOperations.java  IOperationsImpl.java  ManagedAdder.java  OpConsumer.java  Supplier.java
app/src/main/java/managed_dll/methods/: Collection.java  DuplicateMethods.java  Factory.java  Item.java  Parameters.java  SomeExtensions.java  Static.java
app/src/main/java/managed_dll/nestedclasses/: NestedClass.java  ParentClass.java
app/src/main/java/managed_dll/overloads/: AllOperators.java  AllOperatorsWithFriendly.java  ConflictingNamingOverload.java  EqualOverrides.java  (+1 more)
app/src/main/java/mono/: embeddinator
app/src/main/java/mscorlib_dll/: Native_mscorlib_dll.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
(+60 files in other folders)
